RESOLVED FIXED211393
REGRESSION (r260228): Linker warning about limitsNavigationsToAppBoundDomains property overriding instance methods from class
https://bugs.webkit.org/show_bug.cgi?id=211393
Summary REGRESSION (r260228): Linker warning about limitsNavigationsToAppBoundDomains...
David Kilzer (:ddkilzer)
Reported 2020-05-04 13:07:11 PDT
Linker warning about limitsNavigationsToAppBoundDomains/setLimitsNavigationsToAppBoundDomains: overriding instance method from class when building WebKit: ld: warning: instance method 'setLimitsNavigationsToAppBoundDomains:' in category from WebKit.build/Debug/WebKit.build/Objects-normal/x86_64/UnifiedSource24-mm.o overrides method from class in WebKit.build/Debug/WebKit.build/Objects-normal/x86_64/UnifiedSource24-mm.o ld: warning: instance method 'limitsNavigationsToAppBoundDomains' in category from WebKit.build/Debug/WebKit.build/Objects-normal/x86_64/UnifiedSource24-mm.o overrides method from class in WebKit.build/Debug/WebKit.build/Objects-normal/x86_64/UnifiedSource24-mm.o I think this was introduced 2-3 weeks ago. (Might be the cause of flaky behavior if the wrong method is being called.)
Attachments
Patch v1 (2.28 KB, patch)
2020-05-07 17:25 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2020-05-04 13:08:41 PDT
I first noticed this on Apr 17, 2020.
David Kilzer (:ddkilzer)
Comment 2 2020-05-07 17:08:39 PDT
This warning means that the @property was added to the public header: @property (nonatomic) BOOL limitsNavigationsToAppBoundDomains WK_API_AVAILABLE(macos(WK_MAC_TBA), ios(WK_IOS_TBA)); But the implementation was added to a category: @implementation WKWebViewConfiguration (WKPrivate) [...] - (BOOL)limitsNavigationsToAppBoundDomains { return _pageConfiguration->limitsNavigationsToAppBoundDomains(); } - (void)setLimitsNavigationsToAppBoundDomains:(BOOL)limitsToAppBoundDomains { _pageConfiguration->setLimitsNavigationsToAppBoundDomains(limitsToAppBoundDomains); } [...] @end
David Kilzer (:ddkilzer)
Comment 3 2020-05-07 17:25:15 PDT
Created attachment 398818 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 4 2020-05-07 17:25:53 PDT
(In reply to David Kilzer (:ddkilzer) from comment #3) > Created attachment 398818 [details] > Patch v1 (I got tired of seeing the warning when building. :)
Radar WebKit Bug Importer
Comment 5 2020-05-07 19:45:54 PDT
Brent Fulgham
Comment 6 2020-05-08 10:19:30 PDT
Comment on attachment 398818 [details] Patch v1 r=me
EWS
Comment 7 2020-05-08 10:53:27 PDT
Committed r261396: <https://trac.webkit.org/changeset/261396> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398818 [details].
Note You need to log in before you can comment on or make changes to this bug.