REGRESSION (r260228): Linker warning about limitsNavigationsToAppBoundDomains property overriding instance methods from class <https://webkit.org/b/211393>

Reviewed by Brent Fulgham.

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration limitsNavigationsToAppBoundDomains]):
(-[WKWebViewConfiguration setLimitsNavigationsToAppBoundDomains:]):
- Move from WKPrivate category to main category to fix linker
  warnings.


Canonical link: https://commits.webkit.org/224546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261396 268f45cc-cd09-0410-ab3c-d52691b4dbfc